--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,35 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link
-      rel="stylesheet"
-      id="font-awesome-css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css?ver=6.5.1"
-      type="text/css"
-      media="all"
-    />
-  <link rel="stylesheet" href="css/styles.css">
-  <title>Nature Journal</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <h1>Nature Journal</h1>
-  <button><a href="/html/addEntry.html">Add entry</a></button>
-  <div class="entriesList">
-  <% for(let i = 0; i < entries.length; i++) { %>
-    <div class="entry" data-id="<%= entries[i]._id %>">
-      <p><%= entries[i].date %></p>
-      <p><strong><%= entries[i].commonName %></strong></p>
-      <p><%= entries[i].latinName %></p>
-      <a href="<%= entries[i].image %>"><img src="<%= entries[i].image %>" alt="<%= entries[i].commonName %>"></a>
-      <p><%= entries[i].observations %></p>
-      <p><%= entries[i].likes %> <i class="fa-solid fa-thumbs-up"></i></i></p>
-      <p><a href="<%= entries[i].reference %>" target="_blank">Learn More</a></p>
-      <p><i class="fa-solid fa-trash"></i></p>
-    </div>
-    <%  } %>
-  </div>
-  <script src="/js/main.js"></script>
+    <h1>Create Your VERY OWN Nature Journal!</h1>
+    <a href="/login"> Login</a>
+    <a href="/signup"> Signup</a>
 </body>
 </html>
