--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 body {
   box-sizing: border-box;
-  background: yellow;
+  background: rgb(247, 247, 235);
 }
 
 h1 {
@@ -40,7 +40,8 @@ label {
 }
 
 img {
-  width: 150px;
-  height: 150px;
+  width: 100%;
+  height: 125px;
   object-fit: cover;
+  border-radius: 5px;
 }
