--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,27 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-    rel="stylesheet"
-    id="font-awesome-css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css?ver=6.5.1"
-    type="text/css"
-    media="all"
-  />
-<link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Create Your VERY OWN Nature Journal!</h1>
-    <a href="/login"> Login</a>
-    <a href="/signup"> Signup</a>
+<%- include('partials/header') -%>
+<body class="container">
+    <h2>Create Your VERY OWN Nature Journal!</h2>
+    <a href="/login" class="btn btn-warning"> Login</a>
+    <a href="/signup" class="btn btn-warning"> Signup</a>
 
     <div class="entriesList">
         <% for(let i = 0; i < entries.length; i++) { %>
-          <div class="entry" data-id="<%= entries[i]._id %>">
+          <div class="entry card" data-id="<%= entries[i]._id %>">
             <p><%= entries[i].date %></p>
             <p><strong><%= entries[i].commonName %></strong></p>
             <p><%= entries[i].latinName %></p>
@@ -34,4 +19,4 @@
           <%  } %>
         </div>
 </body>
-</html>
+<%- include('partials/footer') -%>
