--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,5 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Nature Journal</title>
   </head>
-  <body>
+  <body class="container">
     <h1 class="mt-3">Nature Journal</h1>
-  </body>
-</html>
