--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,7 +44,11 @@ label {
 
 img {
   width: 100%;
-  height: 125px;
   object-fit: cover;
   border-radius: 5px;
+  max-width: 600px;
+}
+
+img.thumbnail {
+  height: 125px;
 }
