--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -1,21 +1,21 @@
 <%- include('partials/header') -%>
   <a href="/" class="btn btn-warning"><i class="fa-solid fa-house"></i></a>
-  <a href="/html/addEntry.html" class="btn btn-warning">Add entry</a>
+  <a href="/entries/addEntry" class="btn btn-warning">Add entry</a>
   <a href="/logout" class="btn btn-warning">Logout</a>
   <div class="entriesList">
   <% for(let i = 0; i < entries.length; i++) { %>
     <div class="entry card" data-id="<%= entries[i]._id %>">
       <p><%= entries[i].date %></p>
+      <a href="/entries/<%= entries[i]._id %>"><img class="thumbnail" src="<%= entries[i].image %>" alt="<%= entries[i].commonName %>"></a>
+      <br/>
       <p><strong><%= entries[i].commonName %></strong></p>
       <p><%= entries[i].latinName %></p>
-      <a href="<%= entries[i].image %>"><img src="<%= entries[i].image %>" alt="<%= entries[i].commonName %>"></a>
       <p><%= entries[i].observations %></p>
       <p><%= entries[i].likes %> <i class="fa-solid fa-thumbs-up"></i></i></p>
-      <p><a href="<%= entries[i].reference %>" target="_blank">Learn More</a></p>
+      <!-- <p><a href="<%= entries[i].reference %>" target="_blank">Learn More</a></p> -->
       <p><i class="fa-solid fa-trash"></i></p>
-      <p>User: <%= entries[i].userId ? entries[i].userId.userName : "Unknown" %></p>
+      <!-- <p>User: <%= entries[i].userId ? entries[i].userId.userName : "Unknown" %></p> -->
     </div>
     <%  } %>
   </div>
-  <script src="/js/main.js"></script>
 <%- include('partials/footer') -%>
