fixed button on entry detail page

--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
   <a href="/" class="btn btn-warning"><i class="fa-solid fa-house"></i></a>
-  <a href="/entries/addEntry" class="btn btn-warning">Add entry</a>
+  <a href="/entries/addEntry" class="btn btn-warning">Add Entry</a>
   <a href="/logout" class="btn btn-warning">Logout</a>
   <div class="entriesList">
   <% for(let i = 0; i < entries.length; i++) { %>
