--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
   <a href="/" class="btn btn-warning"><i class="fa-solid fa-house"></i></a>
   <a href="/entries" class="btn btn-warning">My Entries</a>
-  <a href="/html/addEntry.html" class="btn btn-warning">Add entry</a>
+  <a href="/entries/addEntry" class="btn btn-warning">Add Entry</a>
   <a href="/logout" class="btn btn-warning">Logout</a>
     <div class="entry mt-5" data-id="<%= entry._id %>">
       <p><%= entry.date %></p>
