--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -2,6 +2,7 @@
   <a href="/" class="btn btn-warning"><i class="fa-solid fa-house"></i></a>
   <a href="/entries/addEntry" class="btn btn-warning">Add Entry</a>
   <a href="/logout" class="btn btn-warning">Logout</a>
+  <h2 class="mt-5"><%= entries[0].userId.userName %></h2>
   <div class="entriesList">
   <% for(let i = 0; i < entries.length; i++) { %>
     <div class="entry card" data-id="<%= entries[i]._id %>">
