--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,13 @@
 <%- include('partials/header') -%>
-<body class="container"> 
+<body class="container">
+    <% if (!isAuthenticated) { %>
     <a href="/login" class="btn btn-warning"> Login</a>
     <a href="/signup" class="btn btn-warning"> Signup</a>
-
+    <% } %>
+    <% if (isAuthenticated) { %>
+    <a href="/logout" class="btn btn-warning"> Logout</a>
+    <% } %>
+    <h2 class="mt-5">all entries</h2>
     <div class="entriesList">
         <% for(let i = 0; i < entries.length; i++) { %>
           <div class="entry card" data-id="<%= entries[i]._id %>">
