--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,14 +7,17 @@ h1 {
   text-align: center;
 }
 
+button {
+  border: none;
+  background: none;
+  color: #15618c;
+}
+
 form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background: #fff;
   width:fit-content;
-  padding: 2rem 2rem;
-  margin: 0 auto;
   input {
     margin-bottom: 1rem;
   }
