form styling clean up

--- a/views/entryForm.ejs
+++ b/views/entryForm.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header') -%>
-<form action="/entries/addEntry" enctype="multipart/form-data" method="POST">
+<form class="centered-form" action="/entries/addEntry" enctype="multipart/form-data" method="POST">
   <div class="formRow">
     <label for="date" class="form-label">Date</label><br>
     <input type="date" class="form-control" name="date" id="date">
