--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,10 +3,6 @@ body {
   background: rgb(247, 247, 235);
 }
 
-h1 {
-  text-align: center;
-}
-
 button {
   border: none;
   background: none;
@@ -21,6 +17,13 @@ form {
   input {
     margin-bottom: 1rem;
   }
+}
+
+.centered-form {
+  margin: 0 auto;
+  border: 1px solid rgba(0, 0, 0, 0.303);
+  border-radius: 5px;
+  padding: 1rem;
 }
 
 label {
