--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,7 +4,8 @@
             <div class="alert alert-danger"><%= el.msg %></div>
         <% }) %>    
     <% } %>
-    <form action="/signup" method="POST">
+    <form class="centered-form" action="/signup" method="POST">
+        <h2>Sign Up</h2>
         <input type="text" name="userName" placeholder="User Name">
         <input type="email" name="email" placeholder="Email">
         <input type="password" name="password" placeholder="Password">
