--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,4 +22,5 @@
     <title>Nature Journal</title>
   </head>
   <body class="container">
-    <h1 class="mt-3">Nature Journal</h1>
+    <h1 class="mt-3"><a href="/"><i class="fa-solid fa-house-chimney"></i> Bird Journal</a></h1>
+    
