--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -1,24 +1,15 @@
 <%- include('partials/header') -%>
-  <a href="/entries/addEntry" class="btn btn-warning">Add Entry</a>
-  <a href="/logout" class="btn btn-warning">Logout</a>
   <h2 class="mt-5"><%= entries[0].userId.userName %></h2>
   <div class="entriesList">
   <% for(let i = 0; i < entries.length; i++) { %>
-    <div class="entry card" data-id="<%= entries[i]._id %>">
+    <div class="entry" data-id="<%= entries[i]._id %>">
       <p><%= entries[i].date %></p>
       <a href="/entries/<%= entries[i]._id %>"><img class="thumbnail" src="<%= entries[i].image %>" alt="<%= entries[i].commonName %>"></a>
       <br/>
       <p><strong><%= entries[i].commonName %></strong></p>
-      <p><%= entries[i].latinName %></p>
-      <p><%= entries[i].observations %></p>
-      <div class="mt-2 mb-2"><%= entries[i].likes %> 
-        <form class="d-inline" action="/entries/likeEntry/<%= entries[i]._id %>?_method=PUT" method="POST">
-          <button class="fa fa-thumbs-up" type="submit"></button>
-        </form>
-      </div>
       <p>
         <form action="/entries/deleteEntry/<%= entries[i]._id %>?_method=DELETE" method="POST">
-          <button class="fa fa-trash" type="submit"></button>
+          <button class="btn btn-danger" type="submit"><i class="fa fa-trash"></i> Delete</button>
         </form>
       </p>
     </div>
