--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,5 +22,18 @@
     <title>Nature Journal</title>
   </head>
   <body class="container">
-    <h1 class="mt-3"><a href="/"><i class="fa-solid fa-house-chimney"></i> Bird Journal</a></h1>
+    <div class="row">
+    <h1 class="mt-3 col-6"><a href="/"><i class="fa-solid fa-house-chimney"></i> Bird Journal</a></h1>
+    <div class="col-6 d-flex justify-content-end mt-3">
+    <% if (!isAuthenticated) { %>
+      <div><a href="/login" class="btn btn-warning"> Login</a>&nbsp;</div>
+      <div><a href="/signup" class="btn btn-warning"> Signup</a></div>
+      <% } %>
+      <% if (isAuthenticated) { %>
+      <div><a href="/entries" class="btn btn-warning">My entries</a>&nbsp;</div>
+      <div><a href="/entries/addEntry" class="btn btn-warning">Add Entry</a>&nbsp;</div>
+      <div><a href="/logout" class="btn btn-warning"> Logout</a></div>
+      <% } %>
+    </div>
+    </div>
     
