--- a/views/userEntries.ejs
+++ b/views/userEntries.ejs
@@ -5,7 +5,7 @@
       <a href="/entries/editUser/<%= user._id %>" type="button" class="btn btn-secondary rounded-circle">
         <i class="fa fa-pencil"></i>
       </a>
-      <img src="<%= user.image %>" alt="<%= user.userName %>" class="avatar"/>
+      <img src="<%= user.image %>" alt="<%= user.userName %>" class="avatar rounded-circle"/>
     </div>
 
     <div class="col-12 col-lg-8">
