--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,19 @@
 <%- include('partials/header') -%>
 <body class="container">
-    <!-- <% if (!isAuthenticated) { %>
-    <a href="/login" class="btn btn-warning"> Login</a>
-    <a href="/signup" class="btn btn-warning"> Signup</a>
-    <% } %>
-    <% if (isAuthenticated) { %>
-    <a href="/entries" class="btn btn-warning">My entries</a>
-    <a href="/logout" class="btn btn-warning"> Logout</a>
-    <% } %> -->
+  <div class="mb-3 mt-5 p-5">
+    <div class="row g-5">
+      <div class="col-md-8">
+        <div class="card-body">
+          <h2>Welcome</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p><small class="text-body-secondary">Special thanks to the <a href="https://documenter.getpostman.com/view/664302/S1ENwy59#intro">eBird API</a></small></p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <img src="/images/crow.png" class="img-fluid rounded-start mt-4" alt="crow silhouette">
+      </div>
+    </div>
+  </div>
     <div class="entriesList">
         <% for(let i = 0; i < entries.length; i++) { %>
           <div class="entry" data-id="<%= entries[i]._id %>">
