--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 body {
   box-sizing: border-box;
-  background: whitesmoke;
+  background: white;
 }
 
 h1 a {
@@ -66,7 +66,8 @@ label {
 }
 
 .entry {
-  background: white;
+  background: whitesmoke;
+  border-radius: 5px;
 }
 
 .entry-image {
@@ -76,7 +77,7 @@ label {
 .facts-column {
   background: #0c5dd738;
   padding: 1.5rem;
-  border-radius: 5px;
+  border-radius: 0 5px 5px 0;
 }
 
 img {
@@ -96,4 +97,11 @@ img.thumbnail {
 .avatar {
   width: 175px;
   height: 175px;
+}
+
+.nav-avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-left: 16px;
 }
