--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header') -%>
-<div class="row mt-5 entry" data-id="<%= entry._id %>">
+<div class="row mt-5 mb-5 entry ps-2" data-id="<%= entry._id %>">
 <div class="col-12 col-lg-4 mt-5">
   <a href="/entries/<%= entry._id %>"><img src="<%= entry.image %>" class="entry-image" alt="<%= entry.commonName %>"></a>
   <div class="mt-2 mb-5"><%= entry.likes %> 
