--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,18 +22,19 @@
     <title>Nature Journal</title>
   </head>
   <body class="container">
-    <div class="row">
+    <nav class="row">
     <h1 class="mt-3 col-6"><a href="/"><i class="fa-solid fa-house-chimney"></i> Bird Journal</a></h1>
-    <div class="col-6 d-flex justify-content-end mt-3">
+    <div class="col-6 d-flex justify-content-end align-items-center mt-3">
     <% if (!isAuthenticated) { %>
       <div><a href="/login" class="btn btn-warning"> Login</a>&nbsp;</div>
       <div><a href="/signup" class="btn btn-warning"> Signup</a></div>
       <% } %>
       <% if (isAuthenticated) { %>
-      <div><a href="/entries" class="btn btn-warning">My entries</a>&nbsp;</div>
-      <div><a href="/entries/addEntry" class="btn btn-warning">Add Entry</a>&nbsp;</div>
-      <div><a href="/logout" class="btn btn-warning"> Logout</a></div>
+      <a href="/entries" class="btn btn-warning">My entries</a>&nbsp;
+      <a href="/entries/addEntry" class="btn btn-warning">Add Entry</a>&nbsp;
+      <a href="/logout" class="btn btn-warning"> Logout</a>
+      <a href="/entries/user/<%= user._id %>"><img class="nav-avatar" src="<%= user.image %>" alt="<%= user.userName %>"></a>
       <% } %>
     </div>
-    </div>
+  </nav>
     
