--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,7 +66,6 @@ label {
 }
 
 .entry {
-  background: whitesmoke;
   border-radius: 5px;
 }
 
@@ -97,6 +96,7 @@ img.thumbnail {
 .avatar {
   width: 175px;
   height: 175px;
+  object-fit: cover;
 }
 
 .nav-avatar {
@@ -104,4 +104,5 @@ img.thumbnail {
   height: 50px;
   border-radius: 50%;
   margin-left: 16px;
+  object-fit: cover;
 }
