--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -14,6 +14,7 @@
   <h3>Observations</h3>
   <p><%= entry.observations %></p>
   <p><strong>User:</strong> <a href="/entries/user/<%= entry.userId._id %>"><%= entry.userId ? entry.userId.userName : "Unknown" %></a></p>
+  <p><a href="/entries//allUser/<%= entry.userId._id %>" class="btn btn-primary my-1">All <%= entry.userId.userName %>s' Entries</a></p>
 </div>
 <div class="col-12 col-lg-2 facts-column">
   <div class="mb-4 mt-5 text-center"><img class="w-75" src="/images/crow.png" alt="outline of crow"></div>
@@ -22,7 +23,7 @@
   <p class="text-center mt-5"><a href="<%= entry.reference %>" target="_blank" class="btn btn-primary">Learn More</a></p>
 </div>
 </div>
-       <%if(entry.userId._id.toString() == user.id) { %>
+       <%if(entry.userId._id.toString() == loggedInUser.id) { %>
           <p><a href="/entries/editEntry/<%= entry._id %>" class="btn btn-warning my-1"><i class="fa fa-pencil"></i> Edit Entry</a></p>
           <form action="/entries/deleteEntry/<%= entry._id %>?_method=DELETE" method="POST">
             <button class="btn btn-danger" type="submit"><i class="fa fa-trash"></i> Delete</button>
