--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,8 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <title>Nature Journal</title>
   </head>
-  <body class="container">
+  <body class="d-flex flex-column min-vh-100"></body>
+  <div class="container">
     <nav class="row">
     <h1 class="mt-3 col-6"><a href="/"><i class="fa-solid fa-house-chimney"></i> Bird Journal</a></h1>
     <div class="col-6 d-flex justify-content-end align-items-center mt-3">
@@ -30,12 +31,13 @@
       <div><a href="/signup" class="btn btn-warning"> Signup</a></div>
       <% } %>
       <% if (isAuthenticated) { %>
-      <a href="/entries" class="btn btn-warning">My Birds</a>&nbsp;
+      <a href="/entries" class="btn btn-warning">My Entries</a>&nbsp;
       <a href="/users" class="btn btn-warning">All Birders</a>&nbsp;
       <a href="/entries/addEntry" class="btn btn-warning">Add Entry</a>&nbsp;
       <a href="/logout" class="btn btn-warning"> Logout</a>
-      <a href="/entries/user/<%= user._id %>"><img class="nav-avatar" src="<%= user.image %>" alt="<%= user.userName %>"></a>
+      <a href="/entries/user/<%= loggedInUser._id %>"><img class="nav-avatar" src="<%= loggedInUser.image %>" alt="<%= loggedInUser.userName %>"></a>
       <% } %>
     </div>
   </nav>
+  <main class="flex-grow-1"></main>
     
