header and footer styling improvements

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,12 @@
 </main>
 </div>
+<div class="mt-5"></div>
 <footer class="bg-light text-dark text-center py-3 mt-auto">
-  <div class="text-center mt-3 "><small>&copy;<span id="year"></span></small></div>
+  <div class="text-center mt-3 ">
+    <small><a href="https://heidifryzell.com"><i class="fa-solid fa-terminal"></i></a>
+      <a href="https://heidifryzell.com" class="text-decoration-none">heidifryzell.com</a> &copy;<span id="year"></span>
+    </small>
+  </div>
   </footer>
   <script src="/js/main.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js" integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
