--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,8 @@
   <body class="d-flex flex-column min-vh-100"></body>
   <div class="container">
     <nav class="row">
-    <h1 class="mt-3 col-6"><a href="/"><i class="fa-solid fa-house-chimney"></i> Bird Journal</a></h1>
+    <h1 class="mt-3 col-6"><a href="/"><i class="fa-solid fa-book"></i></i>
+      Bird Journal</a></h1>
     <div class="col-6 d-flex justify-content-end align-items-center mt-3">
     <% if (!isAuthenticated) { %>
       <div><a href="/login" class="btn btn-warning"> Login</a>&nbsp;</div>
