--- a/views/entryForm.ejs
+++ b/views/entryForm.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header') -%>
+<h2 class="mt-5">Add Entry</h2>
 <form class="centered-form" action="/entries/addEntry" enctype="multipart/form-data" method="POST">
   <div class="formRow">
     <label for="date" class="form-label">Date</label><br>
