--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -110,3 +110,36 @@ img.thumbnail {
   margin-left: 16px;
   object-fit: cover;
 }
+
+/* footer styles */
+footer {
+  width: 100%;
+  padding: 0.5rem 0;
+  background: #404ea00f;
+}
+
+footer p, footer small {
+  text-align: center;
+}
+
+footer a {
+  color: #39457b;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+footer .fa-terminal{
+  animation: terminal-animate 1.5s infinite;
+}
+
+@keyframes terminal-animate {
+  0% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
