fix typo on button linking to all user posts

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -18,6 +18,7 @@
         'short', day: 'numeric' }) %>
       </p>
       <p><strong>Total Entries: </strong> <%= entries.length %></p>
+      <p><a href="/entries//allUser/<%= user._id %>" class="btn btn-primary my-1">All <%= user.userName %>'s Entries</a></p>
     </div>
 
     <div class="col-12 col-lg-2">
