--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -14,7 +14,7 @@
   <h3>Observations</h3>
   <p><%= entry.observations %></p>
   <p><strong>User:</strong> <a href="/entries/user/<%= entry.userId._id %>"><%= entry.userId ? entry.userId.userName : "Unknown" %></a></p>
-  <p><a href="/entries//allUser/<%= entry.userId._id %>" class="btn btn-primary my-1">All <%= entry.userId.userName %>s' Entries</a></p>
+  <p><a href="/entries//allUser/<%= entry.userId._id %>" class="btn btn-primary my-1">All <%= entry.userId.userName %>'s Entries</a></p>
 </div>
 <div class="col-12 col-lg-2 facts-column">
   <div class="mb-4 mt-5 text-center"><img class="w-75" src="/images/crow.png" alt="outline of crow"></div>
